--- a/angular.json
+++ b/angular.json
@@ -79,12 +79,11 @@
             "styles": ["src/styles.scss"],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
-      },
-      "styles": [
-        "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-        "node_modules/primeng/resources/primeng.min.css"
-      ]
+      }
     }
   }
 }
